link to my github account and contact address added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#home">Projects</a></li>
-            <li><a href="#home">Contact me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact me</a></li>
         </ul>
     </nav> 
     <hr>
@@ -33,7 +34,7 @@
         <ul>
             <li><a href="https://public.tableau.com/app/profile/sav4209/viz/Linked_data_in_tableu_showing_co2_emissions_per_country/Sheet1">data viz in tableu</a></li>
             <li><a href="https://app.powerbi.com/groups/me/reports/a96d02f5-6e69-4640-b9c0-307fb41b726c/ReportSection?experience=power-bi">data viz in power BI</a></li>
-            <li><a href="https://ke.kwelicapital.com/">frontend project for Kweli capital website</a></li>
+            <li><a href="https://github.com/Njeriee">my github account</a></li>
             <li><a href="https://www.theforage.com/dashboard">my forage portfolio</a></li>
         </ul>
     </div>
@@ -65,6 +66,15 @@
                 </ul>
             </ul>
         </p>
+    </div>
+    <hr>
+    <div id="contact">
+        <h1>Contact me</h1>
+        <address>
+            <a href="mailto:savelinnjeri@gmail.com">Send me a email</a><br>
+            Box 564, Disneyland<br>
+            Kenya
+            </address>
     </div>
     <hr>
     <footer>©2023</footer>
