--- a/index.html
+++ b/index.html
@@ -7,22 +7,15 @@
     <meta name = "keywords" content="Saveline Wachira,data analyst,frontend engineer">
     <title>home</title>
     <link rel="icon" type="image/x-icon" href="/src/favicon(1).ico">
+    <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact me</a></li>
-        </ul>
-    </nav> 
-    <hr>
-    <div id="home">
-        <h1>Hi my name is Sav and I am a :</h1>
-        <p>frontend engineer | data scientist</p>
-    </div>
+    <section> 
+        <div id="home">
+            <h1>Hi my name is Sav and I am a :</h1>
+            <p>frontend engineer | data scientist</p>
+        </div>
+    </section>
     <hr>
     <div id="about">
         <h1>About me</h1>
@@ -78,5 +71,6 @@
     </div>
     <hr>
     <footer>©2023</footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
